--- a/plotly_dashboard.Rmd
+++ b/plotly_dashboard.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "plotly_dashboard"
-date: "2025-10-30"
+title: "Edmund's (definitely not) barebones websites"
 output: 
   html_document:
     toc: true
