--- a/site_libs/index.Rmd
+++ b/site_libs/index.Rmd
@@ -9,6 +9,15 @@ output:
 
 Welcome! Things are currently under construction but feel free to roam around
 
-![](https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2F17fb5bd9a52cdc14bfaafe2bf9a0f010%2Ftenor.gif&f=1&nofb=1&ipt=370bd9c5b63614fd4680aa592c978c21c35c9f6c0ae90c543bc0152ba1caf581)
-## Links to other websites
+![](/Users/edmundwong/Downloads/p8105_ecw2178.github.io/files/orb-of-confusion-spongebob-1791698264.gif)
+
+---
+
+### Navigate to other pages on this website
+
+* [About me](about.html)
+* [Resume](Resume.html)
+* [Plots and Dashboards](plotly_dashboards.html)
+
+### Links to other websites
 * [P8105](https://p8105.com/)
