--- a/site_libs/plotly_dashboard.Rmd
+++ b/site_libs/plotly_dashboard.Rmd
@@ -11,5 +11,46 @@ output:
 library(p8105.datasets)
 library(tidyverse)
 library(plotly)
+library(htmlwidgets)
+data("rest_inspec")
+```
+
+
+```{r data_eda_cleaning}
+nrow(rest_inspec)
+ncol(rest_inspec)
+str(rest_inspec)
+
+rest_inspec = rest_inspec %>% 
+  janitor::clean_names() %>%
+  drop_na()
+```
+
+```{r data_plots}
+rest_borough = rest_inspec %>% 
+  count(boro) %>% 
+  mutate(boro = fct_reorder(boro, n)) |> 
+  plot_ly(x = ~boro, y = ~n, color = ~boro, type = "bar", colors = "viridis")
+rest_borough
+  
+```
+
+```{r}
+rest_cuisine = rest_inspec %>% 
+  group_by(cuisine_description) %>%
+  filter(n() > 500) %>%  
+  ungroup() %>%
+  mutate(cuisine_description = fct_reorder(cuisine_description, score, median)) %>% 
+  plot_ly(x = ~score, y = ~cuisine_description, type = "box", colors = "pink")
+rest_cuisine
+```
+
+
+```{r}
+rest_scat = rest_inspec %>%
+  group_by(camis) %>%
+  summarise(mean_score = mean(score, na.rm = TRUE), n_violations = n()) %>%
+  plot_ly(x = ~n_violations, y = ~mean_score, type = "scatter", mode = "markers", marker = list(opacity = 0.5))
+rest_scat
 ```
 
